# Main

arduino_code/bldc/: bldc.ino
arduino_code/ir/: ir.ino
arduino_pkg/: package.xml
arduino_pkg/launch/: ir_bldc.launch
arduino_pkg/src/arduino_code/bldc/: bldc.ino
booting/: robot_program.sh  robot_run.sh  robot_state.sh  sensor_test.sh  test.sh
booting/system_setup/: ReadMe.text  robot_program.service  robot_run.service  robot_state.service  test.service
flir_lepton/flir_lepton_image_processing/scripts/: thermal_image_processor.py  thermal_image_visualizer.py
flir_lepton/flir_lepton_purethermal2/purethermal1-firmware/Inc/: version.h
flir_lepton/flir_lepton_purethermal2/scripts/: thermal_subscriber.py
gps_n_lora/: CMakeLists.txt  package.xml
gps_n_lora/include/: serial_fun.cpp
gps_n_lora/src/: main.cpp
hello/: CMakeLists.txt  package.xml
hello/src/: hello.cpp
imu_pkg/: package.xml
imu_pkg/config/: calib.json
imu_pkg/include/: imu.cpp  imu.h
imu_pkg/scripts/: imu_kalman.py  imu_madgwick.py  ros_imu.py
imu_pkg/scripts/utils/: calibrate.py  imu_kalman.py  imu_madgwick.py  test.py
imu_pkg/src/: imu_main.cpp
ir_bldc/: ir_bldc.ino
life_msgs/: CMakeLists.txt
life_msgs/msg/: Cam.msg  IR.msg  Imu.msg  Motor.msg  Motor_set.msg  Status.msg
motor_ctrl/: CMakeLists.txt  package.xml
robot_core/: CMakeLists.txt  package.xml
robot_core/include/: core.cpp  core.h  main_fun.cpp  robot_core.cpp  robot_core.h  ros_fun.cpp
robot_core/src/: main.cpp
robot_main/booting/: robot_program.sh  robot_record.sh
robot_main/booting/system_setup/: robot_program.service  robot_record.service  robot_run.service
robot_main/life_msgs/: CMakeLists.txt  package.xml
robot_main/life_msgs/msg/: Cam.msg  IR.msg  LED.msg  LED_SET.msg  Motor.msg
robot_main/robot_core/: CMakeLists.txt  package.xml
robot_main/robot_core/include/: life_pid.cpp  life_pid.h  life_ros.cpp  life_ros.h  motor.h  pid.cpp  pid.h  rotation.h
robot_main/robot_core/include/motor_manage/: life_pid.cpp  life_pid.h  motor.cpp  motor.h
robot_main/robot_core/include/sensor_manage/: filter.cpp  filter.h  life_ros.cpp  life_ros.h  state_led.cpp  state_led.h
robot_main/robot_core/launch/: robot_main.launch
robot_main/robot_core/src/: main.cpp
robot_main/sensor_pkgs/arduino_pkg/launch/: ir_bldc.launch
robot_main/sensor_pkgs/arduino_pkg/src/arduino_code/bldc/: bldc.ino
robot_main/sensor_pkgs/arduino_pkg/src/arduino_code/ir/: ir.ino
robot_main/sensor_pkgs/arduino_pkg/src/arduino_code/power/: power.ino
robot_main/sensor_pkgs/flir_lepton/flir_lepton_image_processing/launch/: thermal_image_processor.launch
robot_main/sensor_pkgs/flir_lepton/flir_lepton_image_processing/scripts/: thermal_image_processor.py
robot_main/sensor_pkgs/flir_lepton/flir_lepton_purethermal2/scripts/: purethermal2_node.py
robot_main/sensor_pkgs/gps_n_lora/: CMakeLists.txt
robot_main/sensor_pkgs/gps_n_lora/include/: serial_fun.cpp
robot_main/sensor_pkgs/gps_n_lora/src/: IR_test.cpp  main.cpp
robot_main/sensor_pkgs/imu_pkg/: CMakeLists.txt
robot_main/sensor_pkgs/imu_pkg/include/: imu.cpp
robot_main/sensor_pkgs/imu_pkg/src/: imu_main.cpp
robot_main/usb_port_set/: 99-usb-serial.rules
robot_test/booting/: robot_run.sh
robot_test/booting/system_setup/: ReadMe.text  robot_run.service
robot_test/sensor_bag/: drop_and_grap.bag
sensor_bag/: 2021-01-09-11-23-27.bag  test.bag
sensor_check/: CMakeLists.txt  package.xml
sensor_check/src/: main.cpp
sensor_pkgs/arduino_pkg/: CMakeLists.txt
sensor_pkgs/gps_n_lora/src/: main.cpp
serial/: serial.cpp
test/sensor_bag/: person_run.bag
test/test_record/: 2021-02-09-01-54-39.bag  2021-02-09-02-16-55.bag
test_pkg/: CMakeLists.txt  package.xml
